# Socratic-performance

./: .gitignore  ARCHITECTURE.md  LICENSE  PRODUCTION.md  README.md  TASK_1_COMPLETION.md  TASK_1_FILES_INDEX.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: PERFORMANCE_PROFILING.md
examples/: 01_query_profiling.py  02_ttl_cache.py
src/socratic_performance/: __init__.py  cache.py  checker.py  metrics.py  monitoring.py  profiler.py  storage.py  tiers.py  ttl_cache.py
src/socratic_performance/caching/: __init__.py  ttl_cache.py
src/socratic_performance/profiling/: __init__.py  query_profiler.py
tests/: test_caching.py  test_module_imports.py
